--- a/demo.tex
+++ b/demo.tex
@@ -59,12 +59,12 @@
 }
 \makeatother
 
-\title{A Formal Model of Polymorphism in Rust}
-\subtitle{Research Proficiency Evaluation Defense}
+\title{Metropolis}
+\subtitle{A modern beamer theme}
 % \date{\today}
-\date{\today}
-\author{Joseph Eremondi}
-\institute{University of British Columbia}
+\date{}
+\author{Matthias Vogelgesang}
+\institute{Center for modern beamer themes}
 % \titlegraphic{\hfill\includegraphics[height=1.5cm]{logo.pdf}}
 
 \begin{document}
@@ -77,8 +77,6 @@
 \end{frame}
 
 \section{Introduction}
-
-\section{Polymorphism in Rust}
 
 \begin{frame}[fragile]{Metropolis}
 
@@ -102,55 +100,55 @@
   for which \themename provides a nice progress indicator \ldots
 \end{frame}
 
-\section{Declarative Type System}
+\section{Titleformats}
 
 \begin{frame}{Metropolis titleformats}
-	\themename supports 4 different titleformats:
-	\begin{itemize}
-		\item Regular
-		\item \textsc{Smallcaps}
-		\item \textsc{allsmallcaps}
-		\item ALLCAPS
-	\end{itemize}
-	They can either be set at once for every title type or individually.
+    \themename supports 4 different titleformats:
+    \begin{itemize}
+        \item Regular
+        \item \textsc{Smallcaps}
+        \item \textsc{allsmallcaps}
+        \item ALLCAPS
+    \end{itemize}
+    They can either be set at once for every title type or individually.
 \end{frame}
 
 {
     \metroset{titleformat frame=smallcaps}
 \begin{frame}{Small caps}
-	This frame uses the \texttt{smallcaps} titleformat.
+    This frame uses the \texttt{smallcaps} titleformat.
 
-	\begin{alertblock}{Potential Problems}
-		Be aware, that not every font supports small caps. If for example you typeset your presentation with pdfTeX and the Computer Modern Sans Serif font, every text in smallcaps will be typeset with the Computer Modern Serif font instead.
-	\end{alertblock}
+    \begin{alertblock}{Potential Problems}
+        Be aware, that not every font supports small caps. If for example you typeset your presentation with pdfTeX and the Computer Modern Sans Serif font, every text in smallcaps will be typeset with the Computer Modern Serif font instead.
+    \end{alertblock}
 \end{frame}
 }
 
 {
 \metroset{titleformat frame=allsmallcaps}
 \begin{frame}{All small caps}
-	This frame uses the \texttt{allsmallcaps} titleformat.
+    This frame uses the \texttt{allsmallcaps} titleformat.
 
-	\begin{alertblock}{Potential problems}
-		As this titleformat also uses smallcaps you face the same problems as with the \texttt{smallcaps} titleformat. Additionally this format can cause some other problems. Please refer to the documentation if you consider using it.
+    \begin{alertblock}{Potential problems}
+        As this titleformat also uses smallcaps you face the same problems as with the \texttt{smallcaps} titleformat. Additionally this format can cause some other problems. Please refer to the documentation if you consider using it.
 
-		As a rule of thumb: Just use it for plaintext-only titles.
-	\end{alertblock}
+        As a rule of thumb: Just use it for plaintext-only titles.
+    \end{alertblock}
 \end{frame}
 }
 
 {
 \metroset{titleformat frame=allcaps}
 \begin{frame}{All caps}
-	This frame uses the \texttt{allcaps} titleformat.
+    This frame uses the \texttt{allcaps} titleformat.
 
-	\begin{alertblock}{Potential Problems}
-		This titleformat is not as problematic as the \texttt{allsmallcaps} format, but basically suffers from the same deficiencies. So please have a look at the documentation if you want to use it.
-	\end{alertblock}
+    \begin{alertblock}{Potential Problems}
+        This titleformat is not as problematic as the \texttt{allsmallcaps} format, but basically suffers from the same deficiencies. So please have a look at the documentation if you want to use it.
+    \end{alertblock}
 \end{frame}
 }
 
-\section{Algorithmic Type System}
+\section{Elements}
 
 \begin{frame}[fragile]{Typography}
       \begin{verbatim}The theme provides sensible defaults to
@@ -343,8 +341,6 @@ or show \textbf{bold} results.\end{verbatim}
   Some references to showcase [allowframebreaks] \cite{knuth92,ConcreteMath,Simpson,Er01,greenwade93}
 \end{frame}
 
-\section{Correctness}
-
 \section{Conclusion}
 
 \begin{frame}{Summary}
@@ -388,3 +384,4 @@ or show \textbf{bold} results.\end{verbatim}
 \end{frame}
 
 \end{document}
+
