Update on Overleaf.

--- a/demo.tex
+++ b/demo.tex
@@ -345,7 +345,11 @@ or show \textbf{bold} results.\end{verbatim}
 
 \begin{frame}{Summary}
 
-  Get the source of this theme and the demo presentation from
+  You can view the source on Github
+  
+  \begin{center}\url{github.com/JoeyEremondi/UBC-Metropolis-Beamer}\end{center}
+
+  The original theme can be found at
 
   \begin{center}\url{github.com/matze/mtheme}\end{center}
 
